# polarized

./: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
accounts/: admin.py  models.py  urls.py  views.py
accounts/migrations/: 0002_customuser_external_profile_picture_url.py
accounts/templates/accounts/components/: authentication.html  google_icon.html  google_sign_in_button.html  google_sign_in_button_responsive.html  google_sign_in_button_with_text.html  sign_in_modal.html
common/: admin.py  context_processors.py  models.py  urls.py  views.py
common/templates/common/: _main.html  index.html
common/templates/common/base/: footer.html  head.html  header.html  page_end_scripts.html  scripts.html
common/templates/common/components/: loading_throbber.html  modal.html  set_language.html  theme_selector.html
fixtures/: accounts_custom_user_dev.json  subjects_subject.json  subjects_subject_dev.json  subjects_vote_dev.json
locale/de/LC_MESSAGES/: django.mo  django.po
locale/en/LC_MESSAGES/: django.po
locale/es/LC_MESSAGES/: django.mo  django.po
locale/fr/LC_MESSAGES/: django.mo  django.po
polarized/: asgi.py  settings.py  urls.py  wsgi.py
staticfiles/: staticfiles.json
subjects/: admin.py  context_processors.py  models.py  translation.py  urls.py  views.py
subjects/migrations/: 0001_initial.py  0002_subject_created_at_subject_updated_at_and_more.py  0003_subject_description_de_subject_description_en_and_more.py
subjects/templates/subjects/: subjects_list.html
subjects/templatetags/: subject_tags.py
theme/static_src/src/: styles.css
(+1 files in other folders)
